--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodegit": "^0.27.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
     "@types/nodegit": "^0.26.12",
     "tslint": "^6.1.3",
