--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "client",
-	"version": "0.1.0",
+	"name": "git-repo-browser",
+	"version": "1.0.0",
 	"private": true,
 	"proxy": "http://localhost:8080",
 	"dependencies": {
@@ -15,8 +15,8 @@
 		"@testing-library/user-event": "^12.6.0",
 		"@types/jest": "^26.0.19",
 		"@types/node": "^12.19.11",
-		"@types/react": "^16.14.2",
-		"@types/react-dom": "^16.9.10",
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.1",
 		"@types/react-router-dom": "^5.1.7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
