--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "git-repo-browser",
+  "name": "git-repo-server",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "dist/server.js",
   "type": "module",
