--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "nodegit": "^0.27.0"
+    "node-fetch": "^2.6.1",
+    "nodegit": "^0.27.0",
+    "tslog": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
+    "@types/node-fetch": "^2.5.8",
     "@types/nodegit": "^0.26.12",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
