--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,16 +7,16 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch Server",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/dist/app.js",
-            "preLaunchTask": "tsc: build - tsconfig.json",
+            "program": "${workspaceFolder}/server/dist/app.js",
+            "preLaunchTask": "tsc: build - server/tsconfig.json",
             "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
+                "${workspaceFolder}/server/dist/**/*.js"
             ],
-            "env": {"REPO_HOME": "/Users/wolfram/Development/github/node-git-server/data"}
+            "env": {"REPO_HOME": "/Users/wolfram/Development/github/node-git-server/repos"}
         }
     ]
 }
