--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "git-repo-browser",
+	"name": "@wmanth/git-repo-browser",
 	"version": "1.0.0",
 	"private": true,
 	"proxy": "http://localhost:8080",
@@ -14,15 +14,13 @@
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
 		"@types/jest": "^26.0.19",
-		"@types/node": "^12.19.11",
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
 		"@types/react-router-dom": "^5.1.7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.1",
-		"typescript": "^4.1.3"
+		"react-scripts": "4.0.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -47,5 +45,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"chokidar": "^3.5.1"
 	}
 }
