--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-repo-server",
+  "name": "@wmanth/git-repo-server",
   "version": "1.0.0",
   "private": true,
   "description": "",
@@ -25,10 +25,8 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.10",
     "@types/node-fetch": "^2.5.8",
     "@types/nodegit": "^0.26.12",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "tslint": "^6.1.3"
   }
 }
