--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "description": "",
   "main": "dist/server.js",
-  "type": "module",
+  "types": "dist/types.d.ts",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
+    "prepublish": "npm run build",
     "prestart": "npm run build",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
