--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "esModuleInterop": true,
         "target": "es6",
+        "module": "commonjs",
+        "declaration": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
