--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,12 +11,12 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/server/dist/app.js",
+            "program": "${workspaceFolder}/server/dist/server.js",
             "preLaunchTask": "tsc: build - server/tsconfig.json",
             "outFiles": [
                 "${workspaceFolder}/server/dist/**/*.js"
             ],
-            "env": {"REPO_HOME": "/Users/wolfram/Development/github/node-git-server/repos"}
+            "env": {"REPO_HOME": "${workspaceFolder}/repos"}
         }
     ]
 }
