--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"./client"
 	],
 	"devDependencies": {
-		"@types/node": "^14.14.10",
-		"typescript": "^4.1.5"
+		"@types/node": "^15.6.1",
+		"typescript": "4.3.2"
 	}
 }
