--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,21 +1,28 @@
 {
-    "compilerOptions": {
-        "esModuleInterop": true,
-        "target": "es6",
-        "module": "commonjs",
-        "declaration": true,
-        "noImplicitAny": true,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
-    },
-    "include": [
-        "src/**/*"
-    ]
+	"compilerOptions": {
+		"target":"ES2018",
+		"module": "commonjs",
+		"lib": ["es2020"],
+		"declaration": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"strictNullChecks": true,
+		"noImplicitThis": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": false,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strictPropertyInitialization":false,
+		"resolveJsonModule": true,
+		"outDir": "dist",
+		"typeRoots": ["./node_modules/@types"]
+		},
+	"include": [
+		"src/**/*"
+	]
 }
