--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
 		"@types/react-router-dom": "^5.1.7",
-		"@wmanth/git-repo-server": "^1.0.0",
+		"@wmanth/git-repo-types": "^1.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-icons": "^4.2.0",
@@ -47,8 +47,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"chokidar": "^3.5.1"
 	}
 }
