--- a/server/package.json
+++ b/server/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "@wmanth/git-repo-server",
-  "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "main": "dist/server.js",
-  "types": "dist/types.d.ts",
-  "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prepublish": "npm run build",
-    "prestart": "npm run build",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1",
-    "nodegit": "^0.27.0",
-    "tslog": "^3.1.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/morgan": "^1.9.2",
-    "@types/node-fetch": "^2.5.8",
-    "@types/nodegit": "^0.26.12",
-    "tslint": "^6.1.3"
-  }
+	"name": "@wmanth/git-repo-server",
+	"version": "1.0.0",
+	"private": true,
+	"description": "",
+	"main": "dist/server.js",
+	"scripts": {
+		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+		"build": "tsc",
+		"prepublish": "npm run build",
+		"prestart": "npm run build",
+		"start": "node .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.17.1",
+		"morgan": "^1.10.0",
+		"node-fetch": "^2.6.1",
+		"nodegit": "^0.27.0",
+		"tslog": "^3.1.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.12",
+		"@types/morgan": "^1.9.2",
+		"@types/node-fetch": "^2.5.8",
+		"@types/nodegit": "^0.26.12",
+		"@wmanth/git-repo-types": "^1.0.0",
+		"tslint": "^6.1.3"
+	}
 }
