--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,34 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Server",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/server/dist/server.js",
-            "preLaunchTask": "tsc: build - server/tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/server/dist/**/*.js"
-            ],
-            "env": {"REPO_HOME": "${workspaceFolder}/repos"}
-        }
-    ]
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Launch Server",
+			"type": "node",
+			"request": "launch",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/server/dist/server.js",
+			"preLaunchTask": "tsc: build - server/tsconfig.json",
+			"outFiles": [
+				"${workspaceFolder}/server/dist/**/*.js"
+			],
+			"env": {"REPO_HOME": "${workspaceFolder}/repos"}
+		},
+		{
+			"name": "Run Extension",
+			"type": "extensionHost",
+			"request": "launch",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}/vscode"
+			],
+			"outFiles": [
+				"${workspaceFolder}/vscode/dist/**/*.js"
+			],
+			"preLaunchTask": "tsc: build - vscode/tsconfig.json"
+		}
+	]
 }
