--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,13 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.2",
 		"@fortawesome/react-fontawesome": "^0.1.14",
 		"@monaco-editor/react": "^3.7.4",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-icons": "^4.2.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.2"
+	},
+	"devDependencies": {
 		"@testing-library/jest-dom": "^5.11.6",
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
@@ -18,11 +25,8 @@
 		"@types/react-dom": "^17.0.1",
 		"@types/react-router-dom": "^5.1.7",
 		"@wmanth/git-repo-types": "^1.0.0",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-icons": "^4.2.0",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.2"
+		"eslint": "^7.30.0",
+		"typescript": "4.3.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
