--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"description": "",
 	"main": "dist/server.js",
 	"scripts": {
-		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+		"prebuild": "eslint src --ext ts",
 		"build": "tsc",
 		"prepublish": "npm run build",
 		"prestart": "npm run build",
@@ -25,9 +25,13 @@
 	"devDependencies": {
 		"@types/express": "^4.17.12",
 		"@types/morgan": "^1.9.2",
+		"@types/node": "^15.6.1",
 		"@types/node-fetch": "^2.5.8",
 		"@types/nodegit": "^0.26.12",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
 		"@wmanth/git-repo-types": "^1.0.0",
-		"tslint": "^6.1.3"
+		"eslint": "^7.30.0",
+		"typescript": "4.3.2"
 	}
 }
