--- a/shared/package.json
+++ b/shared/package.json
@@ -5,5 +5,11 @@
 	"types": "dist/types.d.ts",
 	"scripts": {
 		"build": "tsc"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"eslint": "^7.30.0",
+		"typescript": "4.3.2"
 	}
 }
