--- a/vscode/package.json
+++ b/vscode/package.json
@@ -42,6 +42,10 @@
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.56.0",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"eslint": "^7.30.0",
+		"typescript": "4.3.2",
 		"vscode-test": "^1.5.0"
 	},
 	"dependencies": {
