--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"private": true,
 	"version": "1.0.0",
 	"workspaces": [
+		"./common",
 		"./server",
 		"./client",
-		"./shared",
 		"./vscode"
 	]
 }
