--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
 		"morgan": "^1.10.0",
 		"node-fetch": "^2.6.1",
 		"nodegit": "^0.27.0",
-		"tslog": "^3.1.1"
+		"tslog": "^3.1.1",
+		"yaml": "^1.10.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.12",
