--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,14 +18,16 @@ jobs:
         run: sudo apt-get install libkrb5-dev
       - name: Install node packages
         run: npm ci
-      - name: Build Common
-        run: npm run --workspace=common build
+      - name: Build and Test Common
+        run: |
+          npm --workspace common run build
+          npm --workspace common run test
       - name: Build Server
-        run: npm run --workspace=server build
+        run: npm --workspace server run build
       - name: Build Frontend
-        run: npm run --workspace=client build
+        run: npm --workspace client run build
       - name: Build VS Code Extension
-        run: npm run --workspace=vscode build
+        run: npm --workspace vscode run build
   docker-image:
     runs-on: ubuntu-20.04
     steps:
