--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"mochaExplorer.files": "**/test/**/*.ts",
+	"mochaExplorer.require": "ts-node/register"
 }
