--- a/common/package.json
+++ b/common/package.json
@@ -5,12 +5,18 @@
 	"main": "dist/types.js",
 	"types": "dist/types.d.ts",
 	"scripts": {
-		"build": "tsc"
+		"build": "tsc",
+		"test": "mocha -r ts-node/register test/**/*.test.ts"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.2.21",
+		"@types/mocha": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"chai": "^4.3.4",
 		"eslint": "^7.30.0",
+		"mocha": "^9.0.2",
+		"ts-node": "^10.1.0",
 		"typescript": "4.3.2"
 	}
 }
