--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"program": "${workspaceFolder}/server/dist/server.js",
+			"program": "${workspaceFolder}/server/dist/main.js",
 			"preLaunchTask": "tsc: build - server/tsconfig.json",
 			"outFiles": [
 				"${workspaceFolder}/server/dist/**/*.js"
