--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,9 +19,8 @@
 		"sourceMap": true,
 		"strictPropertyInitialization":false,
 		"resolveJsonModule": true,
-		"outDir": "dist",
-		"typeRoots": ["./node_modules/@types"]
-		},
+		"outDir": "dist"
+	},
 	"include": [
 		"src/**/*"
 	]
