--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
 		"prepublish": "npm run build",
 		"prestart": "npm run build",
 		"start": "node .",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "NODE_ENV=test mocha -r ts-node/register test/**/*.test.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,7 +24,9 @@
 		"yaml": "^1.10.2"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.2.21",
 		"@types/express": "^4.17.12",
+		"@types/mocha": "^9.0.0",
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^15.6.1",
 		"@types/node-fetch": "^2.5.8",
@@ -32,7 +34,11 @@
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
 		"@wmanth/git-repo-common": "^1.0.0",
+		"chai": "^4.3.4",
+		"chai-http": "^4.3.0",
 		"eslint": "^7.30.0",
+		"mocha": "^9.0.2",
+		"ts-node": "^10.1.0",
 		"typescript": "4.3.2"
 	}
 }
