[repofs] Open a workspace folder for a git reference

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -27,7 +27,7 @@
 	],
 	"activationEvents": [
 		"onView:repoSelect",
-		"onFileSystem:gitrepo"
+		"onFileSystem:repofs"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
