[all] Renamed package names

--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wmanth/git-repo-common",
+	"name": "@repofs/common",
 	"version": "1.0.0",
 	"private": true,
 	"main": "dist/types.js",
