--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wmanth/git-repo-browser",
+	"name": "@repofs/browser",
 	"version": "1.0.0",
 	"private": true,
 	"proxy": "http://localhost:8080",
@@ -24,7 +24,7 @@
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
 		"@types/react-router-dom": "^5.1.7",
-		"@wmanth/git-repo-common": "^1.0.0",
+		"@repofs/common": "^1.0.0",
 		"eslint": "^7.30.0",
 		"typescript": "4.3.2"
 	},
