--- a/vscode/package.json
+++ b/vscode/package.json
@@ -29,7 +29,7 @@
 		"onView:repoSelect",
 		"onFileSystem:repofs"
 	],
-	"main": "./dist/extension.js",
+	"main": "./dist/main.js",
 	"contributes": {
 		"configuration": {
 			"title": "GitRepoFS",
@@ -57,22 +57,26 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run build",
+		"vscode:prepublish": "npm run esbuild -- --minify",
 		"prebuild": "eslint src --ext ts",
-		"build": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run build",
-		"test": "node ./dist/test/runTest.js"
+		"esbuild": "esbuild ./src/extension.ts --bundle --outfile=dist/main.js --external:vscode --format=cjs --platform=node",
+		"build": "npm run esbuild -- --sourcemap",
+		"watch": "tsc --watch",
+		"compile": "tsc",
+		"pretest": "npm run compile",
+		"test": "node ./out/test/runTest.js"
+	},
+	"dependencies": {
+		"@repofs/common": "^1.0.0",
+		"node-fetch": "^2.6.1"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.56.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"esbuild": "^0.12.22",
 		"eslint": "^7.30.0",
 		"typescript": "4.3.2",
 		"vscode-test": "^1.5.0"
-	},
-	"dependencies": {
-		"node-fetch": "^2.6.1"
 	}
 }
