--- a/vscode/tsconfig.json
+++ b/vscode/tsconfig.json
@@ -7,11 +7,12 @@
 		"rootDir": "src",
 		"outDir": "dist",
 		"typeRoots": ["./node_modules/@types", "./src/types"], /* see https://github.com/Stuk/jszip/issues/693 */
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+		"noEmit": true /* disable emitting file from a compilation - we use esbuild for producing bundled output */
 	},
 	"exclude": [
 		"node_modules",
